# Fashion-Item-Classifier

./: .gitignore  Fashion-Item-Classification-using-Fashion-MNISTPPT.pptx  README.md  fashion_classifier_model.keras  main.py  pyproject.toml
fashion_classifier/: __init__.py  data_loader.py  model.py  utils.py
maketest/: maketest.py
notebooks/: GroupNo_12.ipynb
sets/: test_data.csv  train_data.csv  val_data.csv
tests/: __init__.py  test_model.py  test_utils.py
