[project]
name = "fashion-item-classifier"
version = "0.1.0"
description = "A neural network-based fashion item classifier using Fashion MNIST dataset"
authors = [
    {name = "Fashion Item Classifier Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "jupyter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "isort>=6.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/fashion-item-classifier"
Repository = "https://github.com/your-username/fashion-item-classifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fashion_classifier"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fashion_classifier"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
